--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@effect/platform-node": "^0.86.4",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.2.9",
     "class-variance-authority": "^0.7.1",
