--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@effect/platform-node": "^0.86.4",
+    "@effect/platform": "^0.87.1",
+    "@effect/platform-node": "^0.88.3",
+    "@effect/sql-drizzle": "^0.39.1",
+    "@effect/sql-sqlite-node": "^0.41.1",
     "@libsql/client": "^0.14.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -30,8 +33,6 @@
     "better-auth": "^1.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.41.0",
     "effect": "^3.16.8",
     "lucide-react": "^0.518.0",
     "next": "^15.2.3",
